--- a/WindowsFormsAppFramework/WindowsFormsAppFramework.csproj
+++ b/WindowsFormsAppFramework/WindowsFormsAppFramework.csproj
@@ -78,6 +78,14 @@
       <Link>frmMenu.designer.cs</Link>
       <DependentUpon>frmMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\GendocsForms\Forms\frmPoblaciones.cs">
+      <Link>frmPoblaciones.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\frmPoblaciones.designer.cs">
+      <Link>frmPoblaciones.designer.cs</Link>
+      <DependentUpon>frmPoblaciones.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="..\GendocsForms\Forms\frmListaProyectos.resx">
@@ -95,6 +103,10 @@
     <EmbeddedResource Include="..\GendocsForms\Forms\frmMenu.resx">
       <Link>frmMenu.resx</Link>
       <DependentUpon>frmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\GendocsForms\Forms\frmPoblaciones.resx">
+      <Link>frmPoblaciones.resx</Link>
+      <DependentUpon>frmPoblaciones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
