--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -47,6 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GendocsForms\Forms\frmEmpleadosFML.cs">
+      <Link>frmEmpleadosFML.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\frmEmpleadosFML.designer.cs">
+      <Link>frmEmpleadosFML.designer.cs</Link>
+      <DependentUpon>frmEmpleadosFML.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\GendocsForms\Forms\frmListaProyectos.cs">
       <Link>frmListaProyectos.cs</Link>
       <SubType>Form</SubType>
@@ -54,6 +62,14 @@
     <Compile Include="..\GendocsForms\Forms\frmListaProyectos.designer.cs">
       <Link>frmListaProyectos.designer.cs</Link>
       <DependentUpon>frmListaProyectos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmMDIGd.cs">
+      <Link>FrmMDIGd.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmMDIGd.designer.cs">
+      <Link>FrmMDIGd.designer.cs</Link>
+      <DependentUpon>FrmMDIGd.cs</DependentUpon>
     </Compile>
     <Compile Include="..\GendocsForms\Forms\frmMenu.cs">
       <Link>frmMenu.cs</Link>
@@ -63,15 +79,35 @@
       <Link>frmMenu.designer.cs</Link>
       <DependentUpon>frmMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\GendocsForms\Forms\frmPoblaciones.cs">
+      <Link>frmPoblaciones.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\frmPoblaciones.designer.cs">
+      <Link>frmPoblaciones.designer.cs</Link>
+      <DependentUpon>frmPoblaciones.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="..\GendocsForms\Forms\frmEmpleadosFML.resx">
+      <Link>frmEmpleadosFML.resx</Link>
+      <DependentUpon>frmEmpleadosFML.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\GendocsForms\Forms\frmListaProyectos.resx">
       <Link>frmListaProyectos.resx</Link>
       <DependentUpon>frmListaProyectos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="..\GendocsForms\Forms\FrmMDIGd.resx">
+      <Link>FrmMDIGd.resx</Link>
+      <DependentUpon>FrmMDIGd.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\GendocsForms\Forms\frmMenu.resx">
       <Link>frmMenu.resx</Link>
       <DependentUpon>frmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\GendocsForms\Forms\frmPoblaciones.resx">
+      <Link>frmPoblaciones.resx</Link>
+      <DependentUpon>frmPoblaciones.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
