--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -63,6 +63,14 @@
       <Link>frmListaProyectos.designer.cs</Link>
       <DependentUpon>frmListaProyectos.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\GendocsForms\Forms\frmMantenimientoEmpleadosFML.cs">
+      <Link>frmMantenimientoEmpleadosFML.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\frmMantenimientoEmpleadosFML.designer.cs">
+      <Link>frmMantenimientoEmpleadosFML.designer.cs</Link>
+      <DependentUpon>frmMantenimientoEmpleadosFML.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\GendocsForms\Forms\FrmMDIGd.cs">
       <Link>FrmMDIGd.cs</Link>
       <SubType>Form</SubType>
@@ -97,6 +105,10 @@
       <Link>frmListaProyectos.resx</Link>
       <DependentUpon>frmListaProyectos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="..\GendocsForms\Forms\frmMantenimientoEmpleadosFML.resx">
+      <Link>frmMantenimientoEmpleadosFML.resx</Link>
+      <DependentUpon>frmMantenimientoEmpleadosFML.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\GendocsForms\Forms\FrmMDIGd.resx">
       <Link>FrmMDIGd.resx</Link>
       <DependentUpon>FrmMDIGd.cs</DependentUpon>
@@ -117,6 +129,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -130,6 +143,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fml_ingenieria_logo_194x89.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
