--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -47,6 +47,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GendocsForms\Forms\FrmContactos.cs">
+      <Link>FrmContactos.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmContactos.designer.cs">
+      <Link>FrmContactos.designer.cs</Link>
+      <DependentUpon>FrmContactos.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\GendocsForms\Forms\frmEmpleadosFML.cs">
       <Link>frmEmpleadosFML.cs</Link>
       <SubType>Form</SubType>
@@ -105,6 +113,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="..\GendocsForms\Forms\FrmContactos.resx">
+      <Link>FrmContactos.resx</Link>
+      <DependentUpon>FrmContactos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\GendocsForms\Forms\frmEmpleadosFML.resx">
       <Link>frmEmpleadosFML.resx</Link>
       <DependentUpon>frmEmpleadosFML.cs</DependentUpon>
