--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -87,6 +87,14 @@
       <Link>frmEtiquetarEmpleadoFML.designer.cs</Link>
       <DependentUpon>frmEtiquetarEmpleadoFML.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmExpedientes.cs">
+      <Link>FrmExpedientes.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmExpedientes.designer.cs">
+      <Link>FrmExpedientes.designer.cs</Link>
+      <DependentUpon>FrmExpedientes.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\GendocsForms\Forms\frmListaProyectos.cs">
       <Link>frmListaProyectos.cs</Link>
       <SubType>Form</SubType>
@@ -188,6 +196,10 @@
     <EmbeddedResource Include="..\GendocsForms\Forms\frmEtiquetarEmpleadoFML.resx">
       <Link>frmEtiquetarEmpleadoFML.resx</Link>
       <DependentUpon>frmEtiquetarEmpleadoFML.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\GendocsForms\Forms\FrmExpedientes.resx">
+      <Link>FrmExpedientes.resx</Link>
+      <DependentUpon>FrmExpedientes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="..\GendocsForms\Forms\frmListaProyectos.resx">
       <Link>frmListaProyectos.resx</Link>
