--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -159,6 +159,14 @@
       <Link>frmMenu.designer.cs</Link>
       <DependentUpon>frmMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmPedidos.cs">
+      <Link>FrmPedidos.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmPedidos.designer.cs">
+      <Link>FrmPedidos.designer.cs</Link>
+      <DependentUpon>FrmPedidos.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\GendocsForms\Forms\frmPoblaciones.cs">
       <Link>frmPoblaciones.cs</Link>
       <SubType>Form</SubType>
@@ -232,6 +240,10 @@
     <EmbeddedResource Include="..\GendocsForms\Forms\frmMenu.resx">
       <Link>frmMenu.resx</Link>
       <DependentUpon>frmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\GendocsForms\Forms\FrmPedidos.resx">
+      <Link>FrmPedidos.resx</Link>
+      <DependentUpon>FrmPedidos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="..\GendocsForms\Forms\frmPoblaciones.resx">
       <Link>frmPoblaciones.resx</Link>
