Nuevo formulario pedidos

--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -167,6 +167,14 @@
       <Link>frmMenu.designer.cs</Link>
       <DependentUpon>frmMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmPedidoEdit.cs">
+      <Link>FrmPedidoEdit.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmPedidoEdit.designer.cs">
+      <Link>FrmPedidoEdit.designer.cs</Link>
+      <DependentUpon>FrmPedidoEdit.cs</DependentUpon>
+    </Compile>
     <Compile Include="..\GendocsForms\Forms\FrmPedidos.cs">
       <Link>FrmPedidos.cs</Link>
       <SubType>Form</SubType>
@@ -252,6 +260,10 @@
     <EmbeddedResource Include="..\GendocsForms\Forms\frmMenu.resx">
       <Link>frmMenu.resx</Link>
       <DependentUpon>frmMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\GendocsForms\Forms\FrmPedidoEdit.resx">
+      <Link>FrmPedidoEdit.resx</Link>
+      <DependentUpon>FrmPedidoEdit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="..\GendocsForms\Forms\FrmPedidos.resx">
       <Link>FrmPedidos.resx</Link>
