--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -199,6 +199,14 @@
       <Link>FrmRecursos.designer.cs</Link>
       <DependentUpon>FrmRecursos.cs</DependentUpon>
     </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmUnidadesConstructivas.cs">
+      <Link>FrmUnidadesConstructivas.cs</Link>
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="..\GendocsForms\Forms\FrmUnidadesConstructivas.designer.cs">
+      <Link>FrmUnidadesConstructivas.designer.cs</Link>
+      <DependentUpon>FrmUnidadesConstructivas.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="..\GendocsForms\Forms\FrmContactos.resx">
@@ -276,6 +284,10 @@
     <EmbeddedResource Include="..\GendocsForms\Forms\FrmRecursos.resx">
       <Link>FrmRecursos.resx</Link>
       <DependentUpon>FrmRecursos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\GendocsForms\Forms\FrmUnidadesConstructivas.resx">
+      <Link>FrmUnidadesConstructivas.resx</Link>
+      <DependentUpon>FrmUnidadesConstructivas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
