--- a/GendocsController/GendocsController.csproj
+++ b/GendocsController/GendocsController.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GendocsModeloDatos\GendocsModeloDatos.csproj" />
+  </ItemGroup>
+
 </Project>
