--- a/GendocsForms/GendocsForms.csproj
+++ b/GendocsForms/GendocsForms.csproj
@@ -15,15 +15,24 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Forms\Utiles.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <EmbeddedResource Remove="Forms\frmEmpleadosFML.resx" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="itext7" Version="7.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Nancy" Version="2.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="NPOI" Version="2.5.1" />
+    <PackageReference Include="sautinsoft.pdffocus" Version="7.5.3.27" />
   </ItemGroup>
 
   <ItemGroup>
