Se quita la carpeta re Recursos

--- a/GendocsForms/GendocsForms.csproj
+++ b/GendocsForms/GendocsForms.csproj
@@ -15,6 +15,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Resources\**" />
+    <EmbeddedResource Remove="Resources\**" />
+    <None Remove="Resources\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Forms\Utiles.cs" />
   </ItemGroup>
 
