--- a/.editorconfig
+++ b/.editorconfig
@@ -2,3 +2,6 @@
 
 # CS0472: El resultado de la expresión siempre es el mismo ya que un valor de este tipo siempre es igual a "null"
 dotnet_diagnostic.CS0472.severity = none
+
+# EF1001: Internal EF Core API usage.
+dotnet_diagnostic.EF1001.severity = warning
