--- a/GendocsForms/GendocsForms.csproj
+++ b/GendocsForms/GendocsForms.csproj
@@ -21,10 +21,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Forms\FrmCantidadRecursos.cs" />
+    <Compile Remove="Forms\FrmCantidadRecursos.Designer.cs" />
     <Compile Remove="Forms\Utiles.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Remove="Forms\FrmCantidadRecursos.resx" />
     <EmbeddedResource Remove="Forms\frmEmpleadosFML.resx" />
   </ItemGroup>
 
